# Vocagame-src

./: .gitignore  .gitmodules  CMakeLists-Server.txt  CMakeLists.txt  patchBrowserUpdateScreen.js
Resources/: .Resources.json.swp  Resources.json  TestWords.json  TextResources.json
Resources/Levels/: SnakeLevels.json  castleLevels.json  climbWalls.json  newDesign.json  wallShapes.json  wallShapes2.json
Resources/Shaders/: ElectroWall.frag  Light.frag  Meteor.frag  NoiseShader.frag  basic.vert  basicSprite.vert  basicinstanced.vert  basicshield.frag  basictex.vert  blurredRect.frag  boostBar.frag  boostBar2.frag  bossHealthBar.frag  brightness.frag  combineBloom.frag  combineBloomBetter.frag  combineEdges.frag  combineLight.frag  combineLightBloom.frag  combineLightHDR.frag  combineSmoke.frag  edgeDetect.frag  eye.frag  fillBackground.frag  fireBolt.frag  fireEffect.frag  fireShield.frag  fireWall.frag  flag.frag  fuelBar.frag  fullpass.frag  fullpassLight.frag  gaussHoriz.frag  gaussVert.frag  gradient.frag  gradient2.frag  gradientCircle.frag  gradientSquare.frag  gradientX.frag  gradientY.frag  (+11 more)
Resources/Sounds/Rockets/: credit.txt
Resources/Speech/: german.onnx.json
Resources/TexEditorDir/Tools/: tweezerspng
Resources/Textures/Animations/: BlueExplosion.json  GermanFlag.json  PurpleExplosion.json
Resources/Textures/Atlases/: Fruits.json  FruitsAndVegetables.json  HumanBody_0.json  HumanBody_1.json  Kitchen.json  Kleidung.json  Tools2.json  Vegetables.json  Werkzeug.json
Resources/Textures/Backgrounds/: CreditPapers.txt
Resources/Textures/Flags/: Flags.json
Resources/execDb/: SelectedLanguages.json  Werkzeug.json
cmake/: CompilerFlags.cmake  External.cmake
include/: Animation.h  Assets.h  BVH.h  Camera.h  CollisionSystem.h  Commands.h  CommonShaders.h  ComponentSystem.h  Components.h  ExerciseLoader.h  GameEvents.h  GameObject.h  GameObjectSpec.h  GameWorld.h  JSBindings.h  LevelLoading.h  ObjectArena.h  ObjectiveSystem.h  Polygon.h  PostBox.h  PostBox.inl  PostOffice.h  PostOffice.inl  ResourceFetcher.h  SoundSystem.h  TextureAtlas.h  serializers.h
include/Client/: Application.h
include/Editor/: Editor.h  ImageExtractor.h  ToolBoxUI.h
include/Entities/: Box.h  Bullet.h  CharSeq.h  DungeonPlayer.h  EffectsFactory.h  Factories.h  FactoryBase.h  Meteor.h  ObjectRegistry.h  Pickup.h  Planet.h  Player.h  PlayerDungeon.h  PlayerShip.h  Snake.h  Spawner.h  Spawners.h  Specs.h  Texts.h  Trigger.h  VisualEffects.h  Walls.h
include/Games/: CastleGame.h  DodgeGame.h  DungeonGame.h  Game.h  GameLevel.h  IntroScreen.h  JumpGame.h  RaceGame.h  Screen.h  SnakeGame.h  SnakeGameSP.h  SpaceGame.h  VocabularyExam.h
include/Menu/: UIButtons.h  UIDocument.h  UISystem.h
include/Systems/: HealthSystem.h  PathSystem.h  SpriteSystem.h  System.h  TimedEvent.h  TimedEventManager.h  TimedEventSystem.h
include/Utils/: Colony.h  ContiguousColony.h  Grid.h  GridPosGenerator.h  IOUtils.h  RandomTools.h  Statistics.h  Time.h
src/: Animation.cpp  BVH.cpp  Camera.cpp  CollisionSystem.cpp  Commands.cpp  ExerciseLoader.cpp  GameObject.cpp  GameObjectSpec.cpp  GameWorld.cpp  JSBindings.cpp  LevelLoading.cpp  ObjectArena.cpp  ObjectiveSystem.cpp  Polygon.cpp  ResourceFetcher.cpp  SoundSystem.cpp  TextureAtlas.cpp  serializers.cpp
src/Client/: Application.cpp  main.cpp
src/Editor/: Editor.cpp  ImageExtractor.cpp  ToolBoxUI.cpp
src/Entities/: Box.cpp  Bullet.cpp  CharSeq.cpp  DungeonPlayer.cpp  EffectsFactory.cpp  Factories.cpp  FactoryBase.cpp  Meteor.cpp  Pickup.cpp  Planet.cpp  Player.cpp  PlayerDungeon.cpp  PlayerShip.cpp  Snake.cpp  Spawner.cpp  Spawners.cpp  Specs.cpp  Texts.cpp  Trigger.cpp  VisualEffects.cpp  Walls.cpp
src/Games/: CastleGame.cpp  DodgeGame.cpp  DungeonGame.cpp  Game.cpp  GameLevel.cpp  IntroScreen.cpp  JumpGame.cpp  RaceGame.cpp  SnakeGame.cpp  SnakeGameSP.cpp  SpaceGame.cpp  VocabularyExam.cpp
src/Menu/: UIButtons.cpp  UIDocument.cpp  UISystem.cpp
src/PathFinding/: PathFinder.cpp
src/Server/: Server.cpp  ServerBackup.cppxx  SnakeGameServer.cppxx  SnakeGameServer.h  TestGameServer.cpp  TestGameServer.h  message.pb.cc  message.pb.h
src/Shadows/: VisibilityField.cpp
src/Systems/: HealthSystem.cpp  PathSystem.cpp  SpriteSystem.cpp  TimedEvent.cpp  TimedEventManager.cpp  TimedEventSystem.cpp
src/Utils/: Grid.cpp  GridPosGenerator.cpp  IOUtils.cpp  Statistics.cpp  Time.cpp
